    <https://github.com/jhy/jsoup/pull/1671>

  * Bugfix: a comment with all dashes (<!----->) should not emit a parse error.
    <https://github.com/jhy/jsoup/issues/1667>

  * Bugfix: when throwing a SelectorParseException for an invalid selector, don't try to String.format the input, as
    that could throw an IllegalFormatException.
    <https://github.com/jhy/jsoup/issues/1691>

  * Bugfix [Fuzz]: speed improvement when parsing constructed HTML containing very deeply incorrectly stacked formatting
    elements with many attributes.
    <https://github.com/jhy/jsoup/issues/1695>

  * Bugfix [Fuzz]: during parsing, a StackOverflowException was possible given crafted HTML with hundreds of nested
    table elements followed by invalid formatting elements.
    <https://github.com/jhy/jsoup/issues/1697>

*** Release 1.14.3 [2021-Sep-30]
  * Improvement: added native XPath support in Element#selectXpath(String)
    <https://github.com/jhy/jsoup/pull/1629>

  * Improvement: added full support for the <template> tag to the HTML5 parser spec.
    <https://github.com/jhy/jsoup/issues/1634>

  * Improvement: added support in CharacterReader to track newlines, so that parse errors can be reported more
    intuitively.
    <https://github.com/jhy/jsoup/pull/1624>

  * Improvement: tracked parse errors now have more details, including the erroneous token, to help clarify the errors.

  * Improvement: speed and memory optimizations for the :has(subquery) selector.

  * Improvement: the :contains(text) and :containsOwn(text) selectors are now whitespace normalized, aligning to the
    document text that they are matching against.
    <https://github.com/jhy/jsoup/issues/876>

  * Improvement: in Element, speed optimized adopting all of an element's child nodes into a currently empty element.
    Improves the HTML adoption agency algorithm when adopting elements with many children.
    <https://github.com/jhy/jsoup/issues/1638>
